2014-04-17  Wilco  <wdijkstr@arm.com>

	* sysdeps/arm/math-tests.h: New file: Set ARM math-test settings.
	* sysdeps/generic/math-tests.h: Add macro (EXCEPTION_ENABLE_SUPPORTED).
	* math/test-fenv.c: Skip exception trap tests on targets which only
	support non-stop mode.

2014-04-17  Ian Bolton  <ian.bolton@arm.com>
	    Wilco Dijkstra  <wilco.dijkstra@arm.com>

	* sysdeps/aarch64/fpu/math_private.h (HAVE_RM_CTX)
	(libc_feholdsetround_aarch64_ctx)
	(libc_feholdsetround_ctx, libc_feholdsetroundf_ctx)
	(libc_feholdsetroundl_ctx, libc_feresetround_aarch64_ctx)
	(libc_feresetround_ctx, libc_feresetroundf_ctx)
	(libc_feresetroundl_ctx, libc_feresetround_noex_aarch64_ctx)
	(libc_feresetround_noex_ctx, libc_feresetround_noexf_ctx)
	(libc_feresetround_noexl_ctx): Define.

2014-04-16  Richard Henderson  <rth@redhat.com>

	* sysdeps/unix/sysv/linux/alpha/nptl/pthread_once.c: Remove.

	* sysdeps/alpha/Makefile [debug] (CFLAGS-backtrace.c): Enable
	unwind tables.

	* sysdeps/unix/alpha/sysdep.h (__pointer_chk_guard): Remove
	const from the non-libc, non-ldso copy.

	* sysdeps/alpha/libm-test-ulps: Regenerate.

2014-04-16  Ian Bolton  <ian.bolton@arm.com>
	    Wilco Dijkstra  <wilco.dijkstra@arm.com>

	* sysdeps/aarch64/fpu/math_private.h: New file.

2014-04-16  Marcus Shawcroft  <marcus.shawcroft@arm.com>

	* sysdeps/aarch64/libm-test-ulps: Regenerate.

2014-04-16  Igor Zamyatin  <igor.zamyatin@intel.com>

	* sysdeps/x86_64/bits/link.h (La_x86_64_regs): Add lr_bnd.
	(La_x86_64_retval): Add lrv_bnd0 and lrv_bnd1.
	* sysdeps/x86_64/dl-trampoline.S (_dl_runtime_profile): Save
	Intel MPX bound registers before _dl_profile_fixup.
	* sysdeps/x86_64/dl-trampoline.h: Restore Intel MPX bound
	registers after _dl_profile_fixup.  Save and restore bound
	registers bnd0/bnd1 when calling _dl_call_pltexit.
	* sysdeps/x86_64/link-defines.sym (BND_SIZE): New.
	(LR_BND_OFFSET): Likewise.
	(LRV_BND0_OFFSET): Likewise.
	(LRV_BND1_OFFSET): Likewise.
