@@ -11,11 +11,11 @@ Version 2.20
 
   6804, 13347, 14770, 15347, 15514, 15804, 15894, 16002, 16198, 16284,
   16348, 16349, 16357, 16362, 16447, 16532, 16545, 16574, 16599, 16600,
-  16609, 16610, 16611, 16613, 16619, 16623, 16632, 16634, 16639, 16642,
-  16648, 16649, 16670, 16674, 16677, 16680, 16683, 16689, 16695, 16701,
-  16706, 16707, 16712, 16713, 16714, 16731, 16739, 16740, 16743, 16758,
-  16759, 16760, 16770, 16786, 16789, 16799, 16800, 16815, 16824, 16831,
-  16838.
+  16609, 16610, 16611, 16613, 16619, 16623, 16629, 16632, 16634, 16639,
+  16642, 16648, 16649, 16670, 16674, 16677, 16680, 16683, 16689, 16695,
+  16701, 16706, 16707, 16712, 16713, 16714, 16731, 16739, 16740, 16743,
+  16758, 16759, 16760, 16770, 16786, 16789, 16799, 16800, 16815, 16824,
+  16831, 16838.
 
 * Running the testsuite no longer terminates as soon as a test fails.
   Instead, a file tests.sum (xtests.sum from "make xcheck") is generated,
